@@ -26,13 +26,13 @@
         <java.version>1.8</java.version>
     </properties>
 
-<!--    <dependencies>-->
-<!--        <dependency>-->
-<!--            <groupId>org.apache.maven</groupId>-->
-<!--            <artifactId>maven-plugin-api</artifactId>-->
-<!--            <version>3.6.2</version>-->
-<!--        </dependency>-->
-<!--    </dependencies>-->
+    <!--    <dependencies>-->
+    <!--        <dependency>-->
+    <!--            <groupId>org.apache.maven</groupId>-->
+    <!--            <artifactId>maven-plugin-api</artifactId>-->
+    <!--            <version>3.6.2</version>-->
+    <!--        </dependency>-->
+    <!--    </dependencies>-->
 
     <build>
         <plugins>
@@ -43,48 +43,39 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
+                <!--                <version>2.5.3</version>-->
+                <!--                <dependencies>-->
+                <!--&lt;!&ndash;&lt;!&ndash;                    <dependency>&ndash;&gt;&ndash;&gt;-->
+                <!--&lt;!&ndash;&lt;!&ndash;                        <groupId>org.apache.maven</groupId>&ndash;&gt;&ndash;&gt;-->
+                <!--&lt;!&ndash;&lt;!&ndash;                        <artifactId>maven-plugin-api</artifactId>&ndash;&gt;&ndash;&gt;-->
+                <!--&lt;!&ndash;&lt;!&ndash;                        <version>3.6.2</version>&ndash;&gt;&ndash;&gt;-->
+                <!--&lt;!&ndash;&lt;!&ndash;                    </dependency>&ndash;&gt;&ndash;&gt;-->
+                <!--                    <dependency>-->
+                <!--                        <groupId>org.apache.maven.shared</groupId>-->
+                <!--                        <artifactId>maven-invoker</artifactId>-->
+                <!--                        <version>2.2</version>-->
+                <!--                    </dependency>-->
+                <!--                    <dependency>-->
+                <!--                        <groupId>org.apache.maven.scm</groupId>-->
+                <!--                        <artifactId>maven-scm-provider-gitexe</artifactId>-->
+                <!--                        <version>1.11.2</version>-->
+                <!--                    </dependency>-->
+                <!--                </dependencies>-->
                 <configuration>
                     <goal>install</goal>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                     <localCheckout>true</localCheckout>
                     <pushChanges>false</pushChanges>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
-                <configuration>
-                    <argLine>
-                        --illegal-access=permit
-                    </argLine>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.22.0</version>
-                <configuration>
-                    <argLine>
-                        --illegal-access=permit
-                    </argLine>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>integration-test</goal>
-                            <goal>verify</goal>
-                        </goals>
-                    </execution>
-                </executions>
+
             </plugin>
         </plugins>
     </build>
     <scm>
-<!--        <url>https://github.com/MaxMeyer-git/sfg-pet-clinic.git</url>-->
-<!--        <connection>scm:git:git@github.com:MaxMeyer-git/sfg-pet-clinic.git</connection>-->
+        <!--        <url>https://github.com/MaxMeyer-git/sfg-pet-clinic.git</url>-->
+        <!--        <connection>scm:git:git@github.com:MaxMeyer-git/sfg-pet-clinic.git</connection>-->
         <developerConnection>scm:git:git@github.com:MaxMeyer-git/sfg-pet-clinic.git</developerConnection>
-<!--        <tag>sfg-pet-clinic-0.0.3</tag>-->
+        <!--        <tag>sfg-pet-clinic-0.0.3</tag>-->
         <tag>sfg-pet-clinic-0.0.3</tag>
     </scm>
 </project>
